--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -430,7 +430,8 @@
     #viewer[data-active-view=grid] .requires-rotation,
     .no-csstransforms & #viewer[data-active-view=page] .requires-rotation,
     .no-canvas & #viewer[data-active-view=seadragon] .requires-rotation,
-    .no-canvas & #help .requires-rotation
+    .no-canvas & #help .requires-rotation,
+    .touch & .requires-rotation
     {
         display: none;
     }
