--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -7,6 +7,8 @@
 
     height: 100%;
 
+    overflow: hidden;
+
     font-family: sans-serif;
 
     background-color: black; // Set this here so it'll fill the viewport in all zoom/pan scenarios
