--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -232,12 +232,14 @@
                 vertical-align: middle;
                 padding: 0;
 
-                img {
+                > .page {
+                    display: inline-block;
+                    position: relative;
                     max-height: 100vh;
                     max-width: 100vw;
                 }
 
-                img + img {
+                .page + .page {
                     margin: 0 10px;
                 }
             }
