Viewer: tweak small screen button font-size

--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -74,7 +74,8 @@
 
                 @media screen and (max-width: $breakSmall) {
                     padding: 0;
-                    font-size: inherit;
+                    height: 18px;
+                    font-size: 16px;
                 }
             }
         }
