--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -121,7 +121,7 @@
                 padding-top: 1px;
 
                 > * {
-                    height: 24px;
+                    height: $buttonHeight;
                     vertical-align: baseline;
                 }
 
@@ -140,7 +140,7 @@
                 }
 
                 #index {
-                    height: 22px;
+                    height: $buttonHeight;
                     vertical-align: middle;
                 }
 
@@ -161,7 +161,7 @@
                 /* fdSlider polyfill adjustments */
                 #fd-slider-index {
                     vertical-align: top;
-                    height: 22px;
+                    height: $buttonHeight;
                 }
 
                 #index.fd-form-element-hidden {
@@ -172,7 +172,7 @@
                 }
 
                 .controls button {
-                    height: 22px;
+                    height: $buttonHeight;
                 }
             }
 
@@ -236,6 +236,7 @@
                 > .page {
                     display: inline-block;
                     position: relative;
+
                     max-height: 100vh;
                     max-width: 100vw;
                 }
