--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -239,10 +239,12 @@
 
                     max-height: 100vh;
                     max-width: 100vw;
+
+                    margin: 0;
                 }
 
-                .page + .page {
-                    margin: 0 10px;
+                > .page + .page {
+                    margin-left: 10px;
                 }
             }
 
