--- a/src/css/_view.scss
+++ b/src/css/_view.scss
@@ -241,6 +241,10 @@
                     max-width: 100vw;
 
                     margin: 0;
+
+                    .highlighted {
+                        @include search-result-highlight;
+                    }
                 }
 
                 > .page + .page {
@@ -343,13 +347,53 @@
                     background-position: center;
                     background-size: contain;
 
+                    &.hit {
+                        outline: solid $searchHighlightColor 2px;
+                    }
+
                     &.current {
-                        outline: solid $linkColor 2px;
+                        outline: solid $selectedItemOutlineColor 2px;
                     }
                 }
             }
         }
 
+        #content-search {
+            position: fixed;
+            right: 0;
+            bottom: 28px;
+
+            padding: 2px;
+
+            background-color: $pageBackgroundColor;
+            background-color: transparentize($pageBackgroundColor, 0.2);
+
+            border: 2px solid #369;
+            border-right-width: 0;
+
+            > * {
+                display: inline-block;
+                vertical-align: middle;
+                margin: 0 4px;
+            }
+
+            button {
+                height: 20px;
+                width: 20px;
+
+                &.next:after {
+                    content: "→";
+                }
+
+                &.previous:before {
+                    content: "←";
+                }
+            }
+
+            input[type="search"] {
+                width: 8em;
+            }
+        }
     }
 
     #help {
